--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   nest-app:
     build: .
     ports:
-      - "4000:4000"
+      - "3005:3005"
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/nestdb
+      - MONGODB_URI=mongodb://mongo:27017/e-commerce-db
     depends_on:
       - mongo
 
@@ -15,4 +15,4 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_DATABASE: nestdb
+      MONGO_INITDB_DATABASE: e-commerce-db
